--- a/14/04_homework/style.css
+++ b/14/04_homework/style.css
@@ -16,8 +16,23 @@ hr {
   border: #011627 solid 0.5px;
   border-radius: 1px;
 }
-.container {
+.windowWraper {
   width: 150px;
+  height: 600px;
+  /* position: absolute; */
+  z-index: 99999;
+  border: orange solid 2px;
+}
+.holePage {
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+}
+.container {
+  /* position: relative; */
+  min-width: 150px;
+  max-width: 150px;
+  /* overflow: hidden; */
   height: 600px;
   box-sizing: border-box;
   background: linear-gradient(
@@ -26,21 +41,32 @@ hr {
     #bfefaf 53.93%,
     #ffffff 105.05%
   );
-  border-radius: 5px;
 }
 .city {
-  height: 50px;
   width: 100%;
   text-align: center;
-  font-size: 32px;
+  font-size: 24px;
   vertical-align: middle;
-  padding-top: 10px;
+  padding: 10px 5px 0 5px;
+  box-sizing: border-box;
+}
+.city-name {
+  display: inline-block;
+  vertical-align: baseline;
+  height: 70px;
+  line-height: 70px;
+  overflow-wrap: break-word;
+  padding: 0;
+}
+.temp {
+  height: 48px;
 }
 .clouds {
   font-size: 16px;
   vertical-align: middle;
   padding-top: 10px;
   height: 30px;
+  border: none;
 }
 .icon {
   display: block;
@@ -51,14 +77,29 @@ hr {
   height: auto;
   padding: 0;
 }
+.wind {
+  font-size: 16px;
+  height: auto;
+}
+#windSpeed {
+  font-size: 24px;
+  margin: 5px 0 0 0;
+}
 input {
+  border-radius: 5px;
   height: 24px;
   box-sizing: border-box;
-  margin: 10px 0px 0px 0px;
-  width: 100%;
+  /* position: relative; */
+  display: block;
+  margin: 20px auto;
+  width: 90%;
+  text-align: center;
 }
 button {
   width: 100%;
   height: 24px;
-  margin-top: 10px;
+  margin: 20px auto;
+  display: block;
+  width: 90%;
+  border-radius: 5px;
 }
