--- a/20/unit_20/unit_20/style.css
+++ b/20/unit_20/unit_20/style.css
@@ -1,24 +1,44 @@
-.container  {
-    width: 100%;
+.container {
+  width: 100%;
 }
 
 section {
-    margin-bottom: 15px;
-    padding-bottom: 15px;
-    border-bottom: 1px dashed #444;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px dashed #444;
 }
 
 .block {
-    width: 75px;
-    height: 75px;
-    margin: 25px;
-    border: 2px solid #333;
+  width: 75px;
+  height: 75px;
+  margin: 25px;
+  border: 2px solid #333;
 }
 
 .active {
-    background: orange;
+  background: orange;
 }
 
 .hide {
-    display: none;
+  display: none;
+}
+.keyboardLayot {
+  display: flex;
+  margin: 10px;
+}
+.keyBlock {
+  width: 30px;
+  height: 30px;
+  border: #333 solid 2px;
+  margin: 2px;
+  text-align: center;
+  vertical-align: middle;
+}
+.keyBlockAd {
+  width: 100px;
+  height: 30px;
+  border: #333 solid 2px;
+  margin: 2px;
+  text-align: center;
+  vertical-align: middle;
 }
