--- a/14/04_homework/style.css
+++ b/14/04_homework/style.css
@@ -18,20 +18,19 @@ hr {
 }
 .windowWraper {
   width: 150px;
-  height: 600px;
+  height: 400px;
   border: orange solid 2px;
+  overflow: hidden;
 }
 .holePage {
+  height: 320px;
   display: flex;
   flex-direction: row;
-  overflow: hidden;
   position: relative;
 }
 .container {
-  /* position: relative; */
   min-width: 150px;
   max-width: 150px;
-  /* overflow: hidden; */
   height: 600px;
   box-sizing: border-box;
   background: linear-gradient(
@@ -70,8 +69,6 @@ hr {
 .icon {
   display: block;
   font-size: 16px;
-  /* width: 24px; */
-  /* height: 24px; */
   margin: auto;
   height: auto;
   padding: 0;
@@ -84,21 +81,20 @@ hr {
   font-size: 24px;
   margin: 5px 0 0 0;
 }
-input {
-  border-radius: 5px;
-  height: 24px;
-  box-sizing: border-box;
-  /* position: relative; */
-  display: block;
-  margin: 20px auto;
-  width: 90%;
-  text-align: center;
-}
+
 button {
-  width: 100%;
-  height: 24px;
+  height: 48px;
   margin: 20px auto;
   display: block;
   width: 90%;
   border-radius: 5px;
+  position: relative;
+  background-color: #e9e3e6;
+}
+button:hover {
+  background-color: #736fe4;
+  cursor: pointer;
+}
+.btns {
+  display: flex;
 }
